[package]
name = "corsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.0"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
time = {version ="0.3.20", features = ["macros", "serde-human-readable"]}
