[package]
name = "ppcalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive", "wrap_help"] }
anyhow = "1.0"
csv = "1.2.0"
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
fxhash = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
statrs = "0.16.0"
time = { version = "0.3.20", features = ["macros", "serde-human-readable"] }
ppcalc_metric = { path = "../ppcalc_metric" }
zstd = "0.12"
color-print = "0.3"
